--- a/.github/workflows/backup-reviews.yml
+++ b/.github/workflows/backup-reviews.yml
@@ -1,4 +1,3 @@
-
 name: Backup Reviews Data
 
 on:
@@ -6,6 +5,9 @@ on:
     # Runs every 30 minutes
     - cron: '*/30 * * * *'
   workflow_dispatch: # Allows manual triggering
+
+permissions:
+  contents: write
 
 jobs:
   backup-reviews:
